--- a/package.json
+++ b/package.json
@@ -43,9 +43,6 @@
     ],
     "package.json": "npx sort-package-json"
   },
-  "dependencies": {
-    "react": "17.0.2"
-  },
   "devDependencies": {
     "@commitlint/cli": "13.2.0",
     "@commitlint/config-conventional": "13.2.0",
@@ -65,6 +62,7 @@
     "husky": "7.0.2",
     "lint-staged": "11.1.2",
     "prettier": "2.4.1",
+    "react": "17.0.2",
     "sort-package-json": "1.52.0",
     "typescript": "4.4.3"
   },
